sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:14: error: not enough arguments for method swap: (x$1: Int, x$2: Int)Unit.
Unspecified value parameter x$2.
       swap(isSmaller(getValueCount()-2-i,getValueCount()-2-i+1))
           ^